[gd_scene load_steps=5 format=3 uid="uid://ctai4d8r41ay1"]

[ext_resource type="Texture2D" uid="uid://t6ukoinwolxc" path="res://Gui/Menu/Inventory/inventory_item.png" id="1_e0iuf"]
[ext_resource type="Script" uid="uid://cwdfm6ws08mi2" path="res://Gui/Menu/Inventory/inventorybutton.gd" id="2_e0iuf"]
[ext_resource type="LabelSettings" uid="uid://yajdowowcg5x" path="res://fonts/font.tres" id="2_nuksj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e0iuf"]

[node name="InventoryButton" type="Button"]
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_e0iuf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e0iuf")
action_mode = 0
script = ExtResource("2_e0iuf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_e0iuf")

[node name="Control" type="Control" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(8, 8)
mouse_filter = 2

[node name="ItemTexture" type="TextureRect" parent="TextureRect/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ItemQuantity" type="Label" parent="TextureRect/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 1.0
offset_right = 10.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
label_settings = ExtResource("2_nuksj")
horizontal_alignment = 2
autowrap_mode = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
